--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,19 +1,25 @@
-<h2 class="card-header">Edit Post</h2>
-    <form class="card-body edit-post-form">
-        <div class="form-row">
-        <label for="post-title" class="form-label">Title</label>
-        <input name="post-title" type="text" value="{{post.title}}" class="form-input form-control"/>
-        </div>
+<article>
+  <a href="/dashboard" class="is-pulled-right"> &larr; Back to dashboard</a>
+  <h2 class="title mt-5">Edit Post</h2><hr>
+  <form class="edit-post-form">
+    <div>
+        <label for="post-title">Post Title</label>
+      <input class="input post-title" name="post-title" 
+        placeholder = "post title edits" type="text" value="{{post.title}}" />
+    </div>
+    <div>
+      <label for="post-content">Post Content:</label>
+      <input class="textarea post-content" name="post-content" 
+        placeholder = "Post content edits" type="text" value="{{post.contents}}" />
+      <input type="hidden" name="edit-id" value="{{_id}}" />
 
-        <div class="form-row">
-        <label class="form-label" for="content">Content</label>
-        <input name="content" type="text" value="{{post.content}}" class="form-input form-control"/>
-        </div>
-        <button type="submit" class="btn">Update Post</button>
-        <button type="button" class="delete-post-btn btn">Delete Post</button>
-    </form>
+    </div>
+    <div class="is-pulled-right">
 
+    </div>
+    <button type="submit" class="button is-success" id="saveBtn">Save Post</button>
 
+</article>
 
 <script src="/js/edit-post.js"></script>
-<script src="/js/delete-post.js"></script>
+
