--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,9 +1,37 @@
-<div class="container row">
-    <div class="card-header dashboard-post">
-       <h4 class="card-title post-title"><a class="link" href="/post/{{id}}">{{title}}</a></h4>
-        <div class="card-body post-body">
-        <p class="card-body post-content">{{content}}</p>
-        <p class="card-text post-author">Posted by <span class="post-username">{{user.username}}</span> on {{format_date created_at}}</p>
-        </div>
+<div class="card mb-6">
+  <header class="card-header card-header-title has-background-grey-lighter">
+
+    <div class="column">
+      <h5 class="has-text-primary-light">
+        <a
+          href="/post/{{id}}"
+          class="has-text-black is-capitalized is-pulled-left post-id"
+        >
+          {{title}}
+        </a>
+      </h5>
     </div>
+
+    <div class="column">
+      <span class=""> </span>
+    </div>
+
+  </header>
+
+  <div class="card-content">
+    <div class="content has-text-justified">
+      {{post_body}}
+    </div>
+    <div class="is-pulled-right">
+      <a class="snob" href="/users/{{id}}">{{user.username}}</a>
+      - Created date:
+      {{format_time created_at}}
+      - Updated date:
+      {{format_date updated_at}}
+      |
+      <a href="/post/{{id}}">{{comments.length}}
+        {{format_plural "comment" comments.length}}</a>
+    </div>
+
+  </div>
 </div>
