--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,6 @@
-{{#each posts as |post| }}
-<article class="post">
-    {{> post-info post}}
-</article>
+{{#each posts as |post|}}
+{{> post-info post}}
+
+{{else}}
+<h6 class="pb-4 has-text-centered is-italic">There are currently no posts!</h6>
 {{/each}}
