--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,15 +1,21 @@
-<h2 class="title pb-4">Log In</h2>
-  <form id="login-form" class="card-body">
-    <div class="form-row">
-      <label class="form-label" for="username-login">Username</label>
-      <input  id="username-login" type="text" autofocus="true" class="form-input form-control"/>
-    </div>
-    <div class="form-row mb-3">
-      <label class="form-label" for="password-login">Password</label>
-      <input id="password-login" type="password" autofocus="true" class="form-input form-control"/>
-    </div>
-      <button type="submit" class="btn">Login</button>
-      <a class="btn login-link" href="/signup">Sign Up</a>
-  </form>
-    
-<script src="/js/login.js"></script>
+<div class='row'>
+  <div class='col-md-6'>
+    <h2>Log In</h2>
+
+    <form class='form login-form'>
+      <div class='form-group'>
+        <label for='email-login'>Email:</label>
+        <input class='form-input' type='text' id='email-login' />
+      </div>
+      <div class='form-group'>
+        <label for='password-login'>Password:</label>
+        <input class='form-input' type='password' id='password-login' />
+      </div>
+      <div class='form-group'>
+        <button class='btn btn-primary' type='submit'>Sign In</button>
+      </div>
+    </form>
+  </div>
+  <div class='col-md-6'>
+
+<script src='/js/login.js'></script>
