--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,19 +1,22 @@
-<h2 class="card-header">Sign Up</h2>
-  <form id="signup-form" class="card-body">
-    <div class="form-row">
-      <label for="username-signup" class="form-label">Username</label>
-      <input id="username-signup" type="text" class="form-input form-control" />
-    </div>
-    <div class="form-row">
-      <label class="form-label" for="email-signup">Email</label>
-      <input  id="email-signup" type="email" class="form-input form-control" />
-    </div>
-    <div class="form-row">
-      <label class="form-label" for="password-signup">Password</label>
-      <input  id="password-signup" type="password" class="form-input form-control" />
-    </div>
-    <button type="submit" class="btn">Sign Up</button>
-    <a class="btn login-link" href="/login">Log In</a>
-  </form>
+<h2>Sign Up</h2>
+<form class='form signup-form'>
+  <div class='form-group'>
+    <label for='name-signup'>Username:</label>
+    <input class='form-input' placeholder="This is what we'll call you" type='text' id='name-signup' />
+  </div>
+  <div class='form-group'>
+    <label for='email-signup'>Email:</label>
+    <input class='form-input' placeholder='Email' type='text' id='email-signup' />
+  </div>
+  <div class='form-group'>
+    <label for='password-signup'>Password:</label>
+    <input class='form-input' placeholder='Password ' type='password' id='password-signup' />
+  </div>
+  <div class='form-group'>
+    <button class='btn btn-primary' type='submit'>Sign Up</button>
+  </div>
+</form>
+</div>
+</div>
 
 <script src="/js/signup.js"></script>
