--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 
 <div class="wrapper">
   <header>
-    <h1 class="has-text-black px-3 py-3 has-text-weight-bold">Another Tech Blog</h1>
+    <h1 class="has-text-black px-3 py-3 has-text-weight-bold">Tech Blog</h1>
     <nav class="navbar mt-2">
       {{#if logged_in}}
       <ul>
